# AEEM6117-final-project

./: .gitignore  README.md  dynamics_test.ipynb  integrate.py  lambdified_dynamics.pkl  loading_test.ipynb  pyproject.toml  requirements.txt  simulation.py  system.py  test_system.ipynb  utils.py  visualize.py
archive/: dynamics_test.ipynb  loading_test.ipynb  test_system.ipynb
archive/functions/: dynamics.pkl
examples/: test_loaded_functions.ipynb  test_simulation.ipynb  test_system.ipynb
functions/: dynamics.pkl  position.pkl  velocity.pkl
remi/: __init__.py
remi/docs/: index.html  remi.html  search.js
remi/docs/remi/: src.html
remi/docs/remi/src/: integrate.html  simulation.html  system.html  utils.html  visualize.html
remi/src/: __init__.py  clik_functions.py  dynamics.py  integrate.py  kinematics.py  simulation.py  system.py  utils.py  visualize.py
remi/src/functions/: J.pkl  J_dot.pkl  Je.pkl  a_c.pkl  cp.pkl  dynamics.pkl  ee.pkl  forward_dynamics.pkl  gam.pkl  gam1.pkl  gam2.pkl  inverse_dynamics.pkl  lam.pkl  lam_dot.pkl  ops.pkl  position.pkl  r_c.pkl  r_ee.pkl  v_c.pkl  v_cp.pkl  v_ee.pkl  v_ops.pkl  velocity.pkl
work/: dynamics_test.ipynb  test_clik.ipynb
