[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remi"
dynamic = ["version"]
description = "Robotic arm capturE of tuMbling satellite sImulator (REMI)"
readme = "README.md"
requires-python = ">=3.10.8"


[tool.hatch.version]
path = "remi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/remi",
]
